--- a/frontend/src/containers/show.css
+++ b/frontend/src/containers/show.css
@@ -1,10 +1,10 @@
 .show{
     background-color: black;
-    opacity: .80;
+    opacity: 0.8;
     border-radius: 5px;
     padding-top: 10px;
     color: white;   
-    padding: 20px
+    padding: 0.5%;
   }
 
 .show p{
